--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 </header>
 <main>
-  <h2>About JERYU</h2>
+  <h2>About JAY TRAVELS</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa facilis, labore debitis nesciunt ipsam odio corporis architecto reiciendis voluptas ab quibusdam ratione rerum tempore voluptatibus libero cumque dignissimos vero hic!</p>
 </main>
 </body>
