--- a/index.html
+++ b/index.html
@@ -2,22 +2,50 @@
 <html>
 <head>
       <meta charset="UTF-8">
-        <title>JERYU</title>
+        <title>This is Joram</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="icon" href="this/img/favicon.ico" type="image/png"/>
+      <link rel="icon" href="this/img/j_grey.ico" type="image/png"/>
       <link rel="stylesheet" type="text/css" href="this/css/styles.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
+
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+   
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
+</script>
 </head>
 <body>
 <header>
   <div class="title">
-    <h1>JAY TRAVELS</h1>
-    <p>Scroll for more!</p>
+    <h1>Joram Palma</h1>
+    <a href="#section2" style="text-decoration: none;"><p>Scroll for more!</p></a>
   </div>
 </header>
-<main>
-  <h2>About JAY TRAVELS</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa facilis, labore debitis nesciunt ipsam odio corporis architecto reiciendis voluptas ab quibusdam ratione rerum tempore voluptatibus libero cumque dignissimos vero hic!</p>
-</main>
+  <div class="main" id="section2">
+    <section>
+      <img src="this/img/joram.jpg">
+    </section>
+  </div>
 </body>
 </html>
 
