--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ $(document).ready(function(){
 </header>
   <div class="main" id="section2">
     <section>
-      <img src="this/img/joram.jpg">
+      <img src="this/img/joram.JPG">
     </section>
   </div>
 </body>
