--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $(document).ready(function(){
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
       </p>
     </div>
-    <div style="text-align: center; margin: 0px;">
+    <div style="text-align: center; margin-top: 250px;">
         <a href="#main"><img src="this/img/up_arrow.png" id="up-arrow"></a>
     </div>
 </section>
